# casino

./: .gitignore  LICENSE  casino.cabal
src/: Lib.hs
test/: Spec.hs
