name:                casino
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/JeremyLWright/casino#readme
license:             BSD3
license-file:        LICENSE
author:              Jeremy Wright
maintainer:          jeremy@quiescent.us
copyright:           Attribution-ShareAlike 4.0 International (http://creativecommons.org/licenses/by-sa/4.0/)
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable casino-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , casino
  default-language:    Haskell2010

test-suite casino-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , casino
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JeremyLWright/casino
